# sem_6_project

./: README.md
camera-driver/: CameraOV7670RegisterDefinitions.h  Makefile  driver.c  load.sh  unload.sh
car-chassis-driver/: Makefile  driver.c  gpio.c  gpio.h  load.sh  unload.sh  wheels.c  wheels.h
car-control-client/: CMakeLists.txt
car-control-client/include/: CarControlClient.h  TcpClient.h
car-control-client/include/interfaces/: ICarControlClient.h  ITcpClient.h  ITcpClientHandler.h
car-control-client/src/: CarControlClient.cpp  TcpClient.cpp  main.cpp
car-control-server/: CMakeLists.txt
car-control-server/include/: Car.h  CarControlServer.h  Server.h  car-chassis-driver.h
car-control-server/include/interfaces/: ICar.h  IServer.h  IServerHandler.h
car-control-server/src/: Car.cpp  CarControlServer.cpp  Server.cpp  main.cpp
car-controller/: CMakeLists.txt
car-controller/include/: CarControlClient.h  CarState.h  Event.h  EventQueue.h  TcpClient.h
car-controller/include/interfaces/: IEventQueue.h  ITcpClient.h
car-controller/src/: CarControlClient.cpp  EventQueue.cpp  TcpClient.cpp  main.cpp
input-driver/: Makefile  button.c  button.h  driver.c
